force-app/main/default/objects/Club_Season__c/Club_Season__c.object-meta.xml
<CustomObject>
    <label>Club Season</label>
    <nameField>
        <label>Club Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>