force-app/main/default/objects/Club_Season__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated Club</description>
    <label>Club</label>
    <referenceTo>Club_and_Seasons__c</referenceTo>
    <relationshipLabel>Club Seasons</relationshipLabel>
    <relationshipName>Club_Seasons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>