force-app/main/default/objects/Club_Season__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Season end date</description>
    <label>Season End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>