force-app/main/default/objects/Club_Season__c/fields/SeasonNumber__c.field-meta.xml
<CustomField>
    <fullName>SeasonNumber__c</fullName>
    <description>Season number</description>
    <label>Season Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>