force-app/main/default/objects/Club_Season__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Season start date</description>
    <label>Season Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>