force-app/main/default/objects/Club_Season__c/validationRules/EndDateValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateValidity</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>EndDate__c cannot be smaller than StartDate__c</errorMessage>
</ValidationRule>